# shepherd

./: .env.example  .gitignore  =2.2.0  CLAUDE.md  MIGRATION_GUIDE.md  README.md  SCRIPTS.md  Shepherd.xcf  app.py  demo_tools.py  main.py  pytest.ini  requirements-test.txt  requirements.txt
api/: __init__.py  analytics_manager.py  analytics_routes.py  conversation_manager.py  main.py
data/knowledge_base/: chroma.sqlite3
desktop/: desktop_app.py  fix_ubuntu_deps.sh  setup_desktop.sh
docs/: AGENT_COLLABORATION.md  ANALYTICS_USER_GUIDE.md  CONVERSATION_COMPACTING_DESIGN.md  DOCUMENTATION_STATUS_REPORT.md  DOCUMENTATION_UPDATE_ANALYSIS.md  GUI_COMPONENTS.md  IMPLEMENTATION_PLAN.md  PHASE4_COMPLETION_REPORT.md  PHASE5_COMPLETION_REPORT.md  PHASE9_COMPLETION_REPORT.md  PROPOSED_GUI_APPROACH.md  README.md  intelligent_orchestrator_context.md  tool_use_guide.md
docs/01-getting-started/: README.md  quick-start.md
docs/02-user-guides/: README.md  conversation-management.md
docs/03-api-reference/: README.md  analytics-api.md
docs/04-architecture/: README.md  agent-collaboration.md
docs/05-development/: README.md  gui-implementation-plan.md  implementation-plan.md  migration-checklist.md  (+1 more)
scripts/: install.sh  run_tests.sh  start.sh
shepherd-gui/: README.md  jest.config.js  jest.setup.js  next.config.js  package.json  performance-report.json  performance.config.js  tailwind.config.js
shepherd-gui/src-tauri/: Cargo.toml  tauri.conf.json
shepherd-gui/src-tauri/src/: main.rs
tests/: conftest.py  test_infrastructure.py
tools/: analyze_logs.py  test_app_mode.py
(+185 files in other folders)
