[package]
name = "shepherd-gui"
version = "1.0.0"
description = "Shepherd - Intelligent Workflow Orchestrator"
authors = ["InfraWorks.io"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
custom-protocol = [ "tauri/custom-protocol" ]
